--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ footer {
     padding-bottom: 3%;
 }
 
-@media only screen and (min-width: 340px)and (max-width: 500px) {
+@media only screen and (max-width: 420px) {
     h1 {
         font-size: 3rem;
     }
